--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,9 @@
   "description": "dashboard",
   "main": "klima-dashboard.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.4.0"
+    "polymer": "Polymer/polymer#^1.4.0",
+    "google-chart": "GoogleWebComponents/google-chart#^1.1.2",
+    "paper-progress": "PolymerElements/paper-progress#^1.0.12"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
