--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,9 @@
     "polymer": "Polymer/polymer#^1.4.0",
     "google-chart": "GoogleWebComponents/google-chart#^1.1.2",
     "paper-progress": "PolymerElements/paper-progress#^1.0.12",
-    "paper-tooltip": "PolymerElements/paper-tooltip#^1.1.4"
+    "paper-tooltip": "PolymerElements/paper-tooltip#^1.1.4",
+    "iron-scroll-target-behavior": "PolymerElements/iron-scroll-target-behavior#^1.1.1",
+    "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#^1.0.6"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
